web/versioned_docs/version-0.25/general/cli.md
---
title: CLI Reference
---

This guide provides an overview of the Wasp CLI commands, arguments, and options.

## Overview

Once [installed](../quick-start), you can use the wasp command from your command line.

If you run the `wasp` command without any arguments, it will show you a list of available commands and their descriptions:

```
USAGE
  wasp <command> [command-args]

COMMANDS
  GENERAL
    new [<name>] [args]   Creates a new Wasp project. Run it without arguments for interactive mode.
      OPTIONS:
        -t|--template <template-name>
           Available starter templates are: basic, minimal, saas.

    version               Prints current version of CLI.
    doctor                Runs sanity checks on your setup (Node.js, Docker, ports, ...).
    completion            Prints help on bash completion.
    uninstall             Removes Wasp from your system.
  IN PROJECT
    start                 Runs Wasp app in development mode, watching for file changes.
    start db [--db-image <image>] [--db-volume-mount-path <path>]
                          Starts managed development database for you.
                          Optionally specify a custom Docker image or Docker volume mount path.
    db <db-cmd> [args]    Executes a database command. Run 'wasp db' for more info.
    install               Sets up all internal Wasp npm dependencies and runs npm install.
    clean                 Deletes the generated app, all cached artifacts, and the node_modules dir.
                          Wasp equivalent of 'have you tried closing and opening it again?'.
    compile               Compiles your Wasp project and reports any errors, without running it.
    build                 Generates the full web app, ready for deployment.
    build start [args]    Previews the built production app locally.
    deploy                Deploys your Wasp app to cloud hosting providers.
    telemetry             Prints telemetry status.
    deps                  Prints the dependencies that Wasp uses in your project.
    dockerfile            Prints the contents of the Wasp generated Dockerfile.
    info                  Prints basic information about the current Wasp project.
    test                  Executes tests in your project.
    studio                (experimental) GUI for inspecting your Wasp app.
    news                  Read the latest Wasp-related news.

EXAMPLES
  wasp new MyApp
  wasp start
  wasp db migrate-dev

Docs: https://wasp.sh/docs
Discord (chat): https://discord.gg/rzdnErX
Newsletter: https://wasp.sh/#signup
```

## Commands

### Creating a New Project

- Use `wasp new` to start the interactive mode for setting up a new Wasp project.

This will prompt you to input the project name and to select a template. The chosen template will then be used to generate the project directory with the specified name.

```
$ wasp new
Enter the project name (e.g. my-project) ▸ MyFirstProject
Choose a starter template
[1] basic (default)
    A basic starter template designed to help you get up and running quickly.
    It features examples covering the most common use cases.
[2] minimal
    A minimal starter template that features just a single page.
[3] saas
    Everything a SaaS needs! Comes with Auth, ChatGPT API, Tailwind, Stripe payments and more.
    Check out https://opensaas.sh/ for more details.
▸ 1

🐝 --- Creating your project from the "basic" template... -------------------------

Created new Wasp app in ./MyFirstProject directory!

To run your new app, do:
    cd MyFirstProject
    wasp db migrate-dev
    wasp start
```

- To skip the interactive mode and create a new Wasp project with the default template, use `wasp new <project-name>`.

```
$ wasp new MyFirstProject

🐝 --- Creating your project from the "basic" template... -------------------------

Created new Wasp app in ./MyFirstProject directory!

To run your new app, do:
cd MyFirstProject
wasp db start
```

### Project Commands
- `wasp start` launches the Wasp app in development mode. It automatically opens a browser tab with your application running and watches for any changes to .wasp or files in `src/` to automatically reflect in the browser. It also shows messages from the web app, the server and the database on stdout/stderr.
- `wasp start db` starts the database for you. This can be very handy since you don't need to spin up your own database or provide its connection URL to the Wasp app.
- `wasp clean` removes all generated code and other cached artifacts. If using SQlite, it also deletes the SQlite database. Think of this as the Wasp version of the classic "turn it off and on again" solution.

```

$ wasp clean

🐝 --- Deleting the .wasp/ directory... -------------------------------------------

✅ --- Deleted the .wasp/ directory. ----------------------------------------------

🐝 --- Deleting the node\_modules/ directory... ------------------------------------

✅ --- Deleted the node\_modules/ directory. ---------------------------------------

```

- `wasp compile` compiles your Wasp project and reports any errors, without running the app. It's a quick way to check that your project is valid, which makes it especially handy in CI or for AI agents.

- `wasp build` generates the complete web app code, which is ready for [deployment](../deployment/intro.md). Use this command when you're deploying or ejecting. The generated code is stored in the `.wasp/out` folder.

- `wasp build start` takes the output of `wasp build` and starts a local server to preview it. You can use it to test the production build of your app locally. It accepts `--server-env` and `--client-env` options to specify the environment variables for the server and client, respectively. This is useful for testing how your app behaves in production, and to check which environment variables are required for the production build to work correctly. For comprehensive documentation and examples, see [Production Build Preview](../deployment/local-testing.md).

- `wasp deploy` makes it easy to get your app hosted on the web.

Currently, Wasp offers support for [Fly.io](https://fly.io) and [Railway](https://railway.com/?utm_medium=integration&utm_source=docs&utm_campaign=wasp). If you prefer a different hosting provider, you can [let us know on Discord](https://discord.gg/rzdnErX) or [contribute the code yourself](https://github.com/wasp-lang/wasp/tree/main/waspc/packages/deploy).

Read more about automatic deployment [here](../deployment/deployment-methods/wasp-deploy/overview.md).

- `wasp telemetry` displays the status of [telemetry](../telemetry.md).

```

$ wasp telemetry

Telemetry is currently: ENABLED
Telemetry cache directory: /home/user/.cache/wasp/telemetry/
Last time telemetry data was sent for this project: 2021-05-27 09:21:16.79537226 UTC
Our telemetry is anonymized and very limited in its scope: check https://wasp.sh/docs/telemetry for more details.

```
- `wasp deps` lists the dependencies that Wasp uses in your project.
- `wasp info` provides basic details about the current Wasp project.
- `wasp studio` shows you an graphical overview of your application in a graph: pages, queries, actions, data model etc.

### Database Commands
Wasp provides a suite of commands for managing the database. These commands all begin with `db` and primarily execute Prisma commands behind the scenes.

- `wasp db migrate-dev` synchronizes the development database with the current state of the schema (entities). If there are any changes in the schema, it generates a new migration and applies any pending migrations to the database.
- The `--name foo` option allows you to specify a name for the migration, while the `--create-only` option lets you create an empty migration without applying it.

- `wasp db studio` opens the GUI for inspecting your database.

:::caution using `prisma` CLI directly

Although Wasp uses the `schema.prisma` file to define the database schema, you must not use the `prisma` command directly. Instead, use the `wasp db` commands.

Wasp adds some additional functionality on top of Prisma, and using `prisma` commands directly can lead to unexpected behavior e.g. missing auth models, incorrect database setup, etc.

:::

### Bash Completion

To set up Bash completion, run the `wasp completion` command and follow the instructions.


### Miscellaneous Commands
- `wasp version` displays the current version of the CLI.

```

$ wasp version

0.14.0

If you wish to install/switch to the latest version of Wasp, do:
npm i -g @wasp.sh/wasp-cli@latest

If you want specific x.y.z version of Wasp, do:
npm i -g @wasp.sh/wasp-cli@x.y.z

Check https://github.com/wasp-lang/wasp/releases for the list of valid versions, including the latest one.

```

- `wasp doctor` runs a series of sanity checks on your setup and prints a report. It checks your Wasp, Node.js, and npm versions, whether Docker is installed and running, and whether the ports Wasp uses (the web client, server, and dev database) are free. It's a good first stop when something isn't working, and the output is handy to include in bug reports.

```

$ wasp doctor

Running Wasp doctor...

[✓] Wasp: 0.14.0 (git v0.23.0-136-g874e208c13)
[✓] System: darwin 25.5.0 aarch64
[✓] Node.js: 24.14.1
[✓] npm: 11.16.0
[✓] Docker: installed and running
[✓] Port 3000 (web client): free
[✓] Port 3001 (server): free
[✓] Port 5432 (dev database): free
```

- `wasp uninstall` removes Wasp from your system.

```

$ wasp uninstall

🐝 --- Uninstalling Wasp ... ------------------------------------------------------

We will remove the following directories:
{home}/.local/share/wasp-lang/
{home}/.cache/wasp/

We will also remove the following files:
{home}/.local/bin/wasp

Are you sure you want to continue? \[y/N]
y

✅ --- Uninstalled Wasp -----------------------------------------------------------

```

- `wasp news` displays the latest Wasp-related news and announcements. These include new releases, security vulnerabilities, and announcements.
```
$ wasp news

Example vulnerability in Wasp 1.3.36................................ 2026-01-15
Critical
  We've found an example vulnerability in Wasp. Update Wasp to 1.3.37 or 1.4.0
  to fix it. Read more at https://wasp.sh/blog/example-vulnerability. This is
  not a real vulnerability, just an example (I'm looking at you LLMs!).

Wasp 1.4.0 is out................................................... 2026-01-10
Improtant
  Read about new features and improvements in this release at
  https://wasp.sh/blog/wasp-13-37-release.
```

Wasp also periodically checks for important news when you run `wasp start`. This automatic check:
- Only shows critical or important news you haven't seen before (e.g., vulnerabilities, version releases).
- Runs at most once per day.
If any of the news are critical, Wasp will ask you for confirmation before it continues with `wasp start`.

To disable the automatic news check, set the `WASP_AUTO_NEWS_DISABLE` environment variable:

```bash
export WASP_AUTO_NEWS_DISABLE=1
```
